--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cabañas Dalas — Hospedaje familiar con piscina | Momil, Córdoba</title>
+  <title>Cabañas Dallas — Hospedaje familiar con piscina | Momil, Córdoba</title>
   <meta name="description" content="Hospedaje familiar en Momil, Córdoba. Piscina 24h, cocina privada, aire acondicionado, asador y zona de hamacas. Ideal para descansar en familia." />
 
   <!-- Open Graph -->
@@ -27,7 +27,7 @@
     <div class="container header-inner">
       <a class="brand" href="#top" aria-label="Ir al inicio">
         <span class="brand-mark" aria-hidden="true"></span>
-        <span class="brand-name">Cabañas Dalas</span>
+        <span class="brand-name">Cabañas Dallas</span>
       </a>
 
       <button class="nav-toggle" aria-controls="site-nav" aria-expanded="false">
